<resources>
    <string name="app_name">E-commerce</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  menus-->
    <string name="label_home">Home</string>
    <string name="label_shop">Shop</string>
    <string name="label_bag">Bag</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_profile">Profile</string>
    <string name="label_search">Search</string>

    <!--    facebook-->
    <string name="facebook_app_id">868050650378123</string>
    <string name="fb_login_protocol_scheme">fb868050650378123</string>

    <!--    Login-->
    <string name="label_login_with_social">Or login with social account</string>
    <string name="label_forgot_pass">Forgot password</string>
    <string name="label_login">Login</string>
    <string name="label_password">Password</string>

    <!--    Forgot Password-->
    <string name="label_send">Send</string>
    <string name="label_forgot_password">Forgot your password?</string>
    <string name="label_forgot_pass_hint">Please, enter your email address. You will receive a link to create a new password via email.</string>

    <!--    SignUp-->
    <string name="label_have_account">Already have an account?</string>
    <string name="label_signup_with_social">Or sign up with social account</string>
    <string name="label_signup">SignUp</string>
    <string name="label_email">Email</string>

    <string name="label_name">Name</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_view_all">View all</string>

    <!--    Product Detail-->
    <string name="label_add_to_cart">add to cart</string>
    <string name="label_shipping_info">Shipping info</string>

    <string name="label_support">Support</string>
    <string name="label_color">Color</string>
    <string name="label_size">Size</string>

    <!--    Cart-->
    <string name="label_promo_codes">Your Promo Codes</string>
    <string name="label_enter_promo">Enter your promo code</string>
    <string name="label_total_amount">Total amount</string>

    <string name="label_check_out">Check out</string>
    <string name="label_delete_from_the_list">Delete from the list</string>
    <string name="label_add_to_favorite">Add to favorite</string>
    <string name="cart_empty_msg">Sorry, Your cart is empty</string>
    <string name="cart_item_add_msg">Item added</string>

    <string name="cart_no_delivery_type_msg">Select a delivery method</string>
    <string name="cart_no_address_msg">Set a default shipping address</string>
    <string name="cart_no_payment_method_msg">Set a default payment method</string>


    <!--    Modal-->
    <string name="label_select_color">Select Color</string>
    <string name="label_select_size">Select size</string>
    <string name="label_size_info">Size info</string>
    <string name="label_sort_by">Sort by</string>

    <!--    Review-->
    <string name="label_like_this">You can also like this</string>
    <string name="label_send_review">Send review</string>
    <string name="label_your_review">Your review</string>

    <string name="label_review_sub_header">Please share your \nopinion about the product</string>
    <string name="label_review_header">What is your rate ?</string>

    <!--    Placeholder-->
    <string name="bracket_text_placeholder">( %1$d )</string>
    <string name="percentage_text_placeholder">%1$d %2$s </string>
    <string name="money_placeholder">$%1$s </string>
    <string name="money_end_placeholder">%1$s$</string>

    <string name="reviews_placeholder">%1$d review(s)</string>
    <string name="ratings_placeholder">%1$d rating(s)</string>
    <string name="color_placeholder">Color: %1$s</string>
    <string name="size_placeholder">Size: %1$s</string>
    <string name="full_address_placeholder">%1$s, %2$s, %3$s</string>
    <string name="order_number_placeholder">Order № %1$d</string>


    <!--    Filter-->
    <string name="label_apply">apply</string>
    <string name="label_discard">discard</string>

    <string name="label_choose_category">Choose a category</string>
    <string name="label_share">Share</string>
    <string name="label_with_photo">with photo</string>
    <string name="label_write_a_review">Write a review</string>

    <!--    FILE AUTHORITY-->
    <string name="file_provider_authority" translatable="false">%1$s.FileProvider</string>

    <!--    ADDRESS-->
    <string name="label_change">Change</string>
    <string name="label_edit">Edit</string>
    <string name="label_use_default_address">Use as the shipping address</string>
    <string name="label_save_address">save address</string>

    <!--   CARD PAYMENT METHOD-->
    <string name="label_full_name">Full name</string>
    <string name="label_address">Address</string>
    <string name="label_city">City</string>
    <string name="label_state_province_region">State/Province/Region</string>
    <string name="label_zip_code_postal_code">Zip Code (Postal Code)</string>
    <string name="label_country">Country</string>

    <string name="label_add_new_card">Add new card</string>
    <string name="label_name_on_card">Name on card</string>
    <string name="label_card_number">Card number</string>
    <string name="label_expire_date">Expire Date</string>
    <string name="label_cvv">CVV</string>

    <string name="label_default_card">Use as default payment method</string>
    <string name="label_expiry_date">Expiry Date</string>
    <string name="label_card_holder_name">Card Holder Name</string>
    <string name="label_your_payment_card">Your payment card</string>

    <!--    SUCCESS-->
    <string name="success1_sub_header">Your order will be delivered soon.\nThank you for choosing our app!</string>
    <string name="label_success">Success</string>

    <string name="label_continue_shopping">Continue shopping</string>
    <string name="label_thanks_you_msg">Your order will be delivered soon.\nThank you for choosing our app!</string>
    <string name="label_success2">Success!</string>


    <!--    CHECKOUT-->
    <string name="label_card_type">Card type</string>
    <string name="label_add_card">add card</string>
    <string name="label_order">Order:</string>
    <string name="label_delivery">Delivery:</string>
    <string name="label_summary">Summary:</string>
    <string name="label_submit_order">submit order</string>


    <string name="no_data_msg">No data available</string>

    <!--    ORDERS-->
    <string name="label_order_information">Order information</string>
    <string name="label_shipping_address">Shipping Address:</string>
    <string name="label_payment_method">Payment method:</string>
    <string name="label_delivery_method">Delivery method:</string>
    <string name="label_discount">Discount:</string>
    <string name="label_total">Total:</string>

    <string name="label_delivered">Delivered</string>
    <string name="label_processing">Processing</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_tracking_number">Tracking number:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_details">Details</string>


</resources>
